--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,64 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.landing-page{
+
+}
+.landing-div{
+  width:80%;
+  height:20rem;
+  margin: auto;
+  margin-top: 18rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 2px grey solid;
+}
+.landing-div-right{
+  width:60%;
+  text-align: center;
+}
+.landing-div-left{
+  width:30%;
+  text-align: center;
+  background-color: #6A67CE;
+}
+.landing-div-left h1{
+  font-size: 3rem;
+  margin-top: 3rem;
+  color: white;
+}
+.landing-div-left p{
+  font-size: 1rem;
+  margin: auto;
+  color: white;
+  margin-top: 20px;
+}
+.ls-div{
+  margin: auto;
+  border: 1px solid grey;
+  height:35px;
+  width:90%;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
+  text-align: center;
+  background-color: #4E944F;
+  color:aliceblue;
+}
+.nav{
+  width:100%;
+  height:20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.nav-right{
+  width:40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
