--- a/src/index.css
+++ b/src/index.css
@@ -11,53 +11,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+/*Landing page*/
 .landing-page{
-
+width: 80%;
+height: 500px;
+margin-top: 100px;
+margin:auto;
 }
-.landing-div{
-  width:80%;
-  height:20rem;
-  margin: auto;
-  margin-top: 18rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  border: 2px grey solid;
-}
-.landing-div-right{
+.landing-div-header{
   width:60%;
-  text-align: center;
+  height:30%;
+  text-align: center  ;
+  margin: 50px auto;
+  padding: 20px;
 }
-.landing-div-left{
-  width:30%;
-  text-align: center;
-  background-color: #6A67CE;
-}
-.landing-div-left h1{
+.landing-div-header h1{
   font-size: 3rem;
-  margin-top: 3rem;
-  color: white;
+  font-weight: bolder;
 }
-.landing-div-left p{
-  font-size: 1rem;
+.landing-div-header p{
+  font-size: 2rem;
+  font-weight: 200;
+  color: gray;
+}
+.landing-div-footer{
+  width:60%;
+  height:100px;
   margin: auto;
-  color: white;
-  margin-top: 20px;
+  margin-top: 100px;
 }
 .ls-div{
+  width:80%;
+  height:40px;
   margin: auto;
-  border: 1px solid grey;
-  height:35px;
-  width:90%;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  border-top-right-radius: 20px;
-  text-align: center;
-  background-color: #4E944F;
-  color:aliceblue;
 }
+
+/* login-signup*/
+
+
 .nav{
   width:100%;
   height:20%;
@@ -72,3 +63,23 @@ code {
   flex-direction: row;
   justify-content: space-around;
 }
+.dashboard{
+  width:80%;
+  height: auto;
+  margin: auto;
+  margin-top: 80px;
+}
+.table-list{
+  width:80%;
+  margin: auto;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-auto-rows: 100px;
+}
+.add{
+  margin-top: 20px;
+  text-align: center;
+}
+
