--- a/src/index.css
+++ b/src/index.css
@@ -73,11 +73,20 @@ margin:auto;
   justify-content: space-between;
   margin-top: 10px;
 }
+.nav-left{
+  margin-left: 10px;
+}
+.nav-left span{
+  font-size: 3rem;
+}
 .nav-right{
   width:40%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+.nav-right-user span{
+  font-size: 2rem;
 }
 .dashboard{
   width:80%;
