--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,7 @@ margin:auto;
   border-radius: 10px;
 }
 .search-bar{
-  width:80%;
+  width:50%;
   border:1px black;
   height:50px;
   margin: 10px auto;
@@ -209,4 +209,19 @@ margin:auto;
 .search-results-row:hover {
   background-color: #eceffa;
   cursor: pointer;
+}
+.filter{
+  width:70%;
+  margin:40px auto;
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start;
+}
+.filter .input-group
+{
+  width:50%;
+  margin-right: 20px;
+}
+.filter-row-entity-name{
+  width:40%;
 }
